--- a/theme/marketshop1/dept.phtml
+++ b/theme/marketshop1/dept.phtml
@@ -1,6 +1,7 @@
 <%
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
+	g_route_page_id = "dept"
 %>
 <!--#INCLUDE FILE="../../core/catalog/include_dept_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
@@ -19,7 +20,7 @@
 		<div class="row">
 			<!--Left Part Start -->
 			<aside id="column-left" class="col-sm-3 hidden-xs">
-				<!--#INCLUDE FILE="include/left.phtml"-->
+				<!--#INCLUDE FILE="include/left_category.phtml"-->
 			</aside>
 			<!--Left Part End -->
 			<!--Middle Part Start-->
