--- a/theme/marketshop1/include/js.phtml
+++ b/theme/marketshop1/include/js.phtml
@@ -11,6 +11,11 @@
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/lib/ios-orientationchange-fix.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/js/jquery.swipebox.min.js"></script>
 <% end if %>
+<% if g_route_page_id = "sproduct" then %>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/lib/ios-orientationchange-fix.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/js/jquery.swipebox.min.js"></script>
+<% end if %>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/custom.js"></script>
 <script type="text/javascript">
 function setLocation(url){
@@ -39,62 +44,37 @@ $("#zoom_01").bind("click", function(e) {
 });
 </script>
 
-<script language="javascript">
-var FormValidation = function () {
-	var reviewValidation1 = function() {
-		var form1 = $('#review-form');
-		var error1 = $('.alert-danger', form1);
-		var success1 = $('.alert-success', form1);
+<script type="text/javascript">
+jQuery(document).ready(function() { 
+   //FormValidation.init();
+});
+</script>
 
-		form1.validate({
-			
-			//RULES
-			rules: {
-				title: {
-					required: true
-				},
-				review: {
-					required: true
-				},
-				rating: {
-					required: true
-				}
-			},
-			messages: {
-				login_email: {
-					required: "Please enter your email address.",
-					email : "Please enter a valid email address."
-				},
-				login_password: {
-					required: "Please enter your password."
-				}
-			},
-			highlight: function (element) { // hightlight error inputs
-
-				$(element)
-					.closest('.form-group').addClass('has-error'); // set error class to the control group
-			},
-
-			unhighlight: function (element) { // revert the change done by hightlight
-				$(element)
-					.closest('.form-group').removeClass('has-error'); // set error class to the control group
-			}
-			
-		});
-
-	}
-	return {
-		//main function to initiate the module
-		init: function () {
-			reviewValidation1();
-		}
-	};
-
-}();
+<% end if %>
+<% if g_route_page_id = "sproduct" then %>
+<script type="text/javascript">
+// Elevate Zoom for Product Page image
+$("#zoom_01").elevateZoom({
+	gallery:'gallery_01',
+	cursor: 'pointer',
+	galleryActiveClass: 'active',
+	imageCrossfade: true,
+	zoomWindowFadeIn: 500,
+	zoomWindowFadeOut: 500,
+	lensFadeIn: 500,
+	lensFadeOut: 500,
+	loadingIcon: 'image/progress.gif'
+	}); 
+//////pass the images to swipebox
+$("#zoom_01").bind("click", function(e) {
+  var ez =   $('#zoom_01').data('elevateZoom');
+	$.swipebox(ez.getGalleryList());
+  return false;
+});
 </script>
 <script type="text/javascript">
 jQuery(document).ready(function() { 
-   FormValidation.init();
+   //FormValidation.init();
 });
 </script>
 
