--- a/admin/design_template.phtml
+++ b/admin/design_template.phtml
@@ -2,13 +2,16 @@
 <!-- #INCLUDE File="util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="util/xt_func_string.phtml" -->
 <!-- #INCLUDE File="include/i_login.phtml" -->
+<%
+	THEME_TEMPLATE = GetSettingValue("THEME_TEMPLATE", "porto")
+%>
 <!--#INCLUDE FILE="include/doctype.phtml"-->
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+ <link href="../assets/global/plugins/cubeportfolio/css/cubeportfolio.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 </head>
-
 <body class="page-container-bg-solid">
 <div class="page-wrapper">
 	<div class="page-wrapper-row">
@@ -24,23 +27,119 @@
 				<div class="page-content-wrapper">
 					<!-- BEGIN CONTENT BODY -->
 					<!-- BEGIN PAGE HEAD-->
-					<div class="page-head">
-						<div class="container-fluid">
-							<!-- BEGIN PAGE TITLE -->
-							<div class="page-title">
-								<h1>Dashboard
-									<small>dashboard & statistics</small>
-								</h1>
-							</div>
-							<!-- END PAGE TITLE -->
-						</div>
-					</div>
+					
 					<!-- END PAGE HEAD-->
 					<!-- BEGIN PAGE CONTENT BODY -->
 					<div class="page-content">
 						<div class="container-fluid">
 							<!-- BEGIN PAGE CONTENT INNER -->
 							<div class="page-content-inner">
+								<div class="page-content-inner">
+								<div class="row">
+									<div class="col-md-12">
+										<form id="form_edit_1" class="form-horizontal form-row-seperated" action="#">
+										<input type="hidden" id="pf_id" name="pf_id" value="<%=pf_id%>">
+										<input type="hidden" id="pf_op" name="pf_op" value="<%=pf_op%>">
+											<div class="portlet">
+												<div class="portlet-title">
+													<div class="caption">
+													<i class="icon-cloud-upload"></i>
+													Templates
+													</div>
+													<div class="actions btn-set">
+														
+														<button class="btn btn-success" onclick="savebutton='1';">
+															<i class="fa fa-check"></i> Apply Template
+														</button>
+													</div>
+												</div>
+												<div class="alert alert-danger display-hide">
+												<button class="close" data-close="alert"></button> You have some form errors. Please check below. 
+												</div>
+												<div class="alert alert-success display-hide">
+												<button class="close" data-close="alert"></button> The information has been saved.
+												</div>
+												<div class="alert alert-warning display-hide">
+												<button class="close" data-close="alert"></button> The information has not been saved properly. Please contact system administrator.
+												</div>
+												<div class="portlet-body">
+													<div class="portfolio-content portfolio-1">
+														<div id="js-grid-juicy-projects" class="cbp">
+															<%
+																Filepath = Server.MapPath("..\theme")
+																Set objFSO = CreateObject("Scripting.FileSystemObject")
+																Set Folder = objFSO.GetFolder(Filepath)
+																
+																For Each Subfolder in Folder.SubFolders
+																	'GET thumb image, full image, get id and description
+																	info_file = Subfolder.Path & "\docs\info.txt"
+																	'Response.Write(info_file)
+																	if objFSO.FileExists(info_file) Then
+																		Set Out = objFSO.OpenTextFile(info_file,1,FALSE, FALSE)
+																		i = 1
+																		do while not out.AtEndOfStream
+																			s_out = Trim(Out.ReadLine)
+																			SELECT CASE i
+																			CASE 1
+																				template_id = s_out
+																			CASE 2
+																				template_name = s_out
+																			CASE 3
+																				template_description = s_out
+																			CASE 4
+																				template_thumbnail = s_out
+																			CASE 4
+																				template_full_image = s_out
+																			END SELECT
+																			i = i + 1
+																		loop
+																		Out.Close
+																		set Out = nothing
+															%>
+															<div class="cbp-item graphic">
+																<div class="cbp-caption">
+																	<div class="cbp-caption-defaultWrap">
+																		<img src="../theme/<%=template_id%>/docs/<%=template_thumbnail%>" alt="" <%if template_id = THEME_TEMPLATE then %>style="border: 3px solid #ff3300;"<%end if%>> </div>
+																	<div class="cbp-caption-activeWrap">
+																		<div class="cbp-l-caption-alignCenter">
+																			<div class="cbp-l-caption-body">
+																			<a href="../assets/global/img/portfolio/1200x900/57.jpg" class="cbp-lightbox cbp-l-caption-buttonRight btn red uppercase btn red uppercase" data-title="Dashboard<br>by Paul Flavius Nechita">view larger</a>
+																			</div>
+																		</div>
+																	</div>
+																</div>
+																<div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">
+																	<input type="radio" name="template_id" value="<%=template_id%>" <%if THEME_TEMPLATE = template_id then%>checked<%end if%>>
+																	<%=template_name%>
+																</div>
+																<div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center"><%=template_description%></div>
+															</div>
+															<%
+																	end if
+																Next
+																set objFSO = nothing
+															%>
+														</div>
+														<!--
+														<div id="js-loadMore-juicy-projects" class="cbp-l-loadMore-button">
+															<a href="../assets/global/plugins/cubeportfolio/ajax/loadMore.html" class="cbp-l-loadMore-link btn grey-mint btn-outline" rel="nofollow">
+																<span class="cbp-l-loadMore-defaultText">LOAD MORE</span>
+																<span class="cbp-l-loadMore-loadingText">LOADING...</span>
+																<span class="cbp-l-loadMore-noMoreLoading">NO MORE WORKS</span>
+															</a>
+														</div>
+														-->
+													</div>
+												</div>
+											</div>
+										</form>
+									</div>
+								</div>
+							
+							
+								
+								
+								
 								
 							</div>
 							<!-- END PAGE CONTENT INNER -->
@@ -62,12 +161,171 @@
 </div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-
+<script src="../assets/global/plugins/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
-
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script type="text/javascript">
-	
+(function($, window, document, undefined) {
+    'use strict';
+
+    // init cubeportfolio
+    $('#js-grid-juicy-projects').cubeportfolio({
+        filters: '#js-filters-juicy-projects',
+        loadMore: '#js-loadMore-juicy-projects',
+        loadMoreAction: 'click',
+        layoutMode: 'grid',
+        defaultFilter: '*',
+        animationType: 'quicksand',
+        gapHorizontal: 35,
+        gapVertical: 30,
+        gridAdjustment: 'responsive',
+        mediaQueries: [{
+            width: 1500,
+            cols: 5
+        }, {
+            width: 1100,
+            cols: 4
+        }, {
+            width: 800,
+            cols: 3
+        }, {
+            width: 480,
+            cols: 2
+        }, {
+            width: 320,
+            cols: 1
+        }],
+        caption: 'overlayBottomReveal',
+        displayType: 'sequentially',
+        displayTypeSpeed: 80,
+
+        // lightbox
+        lightboxDelegate: '.cbp-lightbox',
+        lightboxGallery: true,
+        lightboxTitleSrc: 'data-title',
+        lightboxCounter: '<div class="cbp-popup-lightbox-counter">{{current}} of {{total}}</div>',
+
+        // singlePage popup
+        singlePageDelegate: '.cbp-singlePage',
+        singlePageDeeplinking: true,
+        singlePageStickyNavigation: true,
+        singlePageCounter: '<div class="cbp-popup-singlePage-counter">{{current}} of {{total}}</div>',
+        singlePageCallback: function(url, element) {
+            // to update singlePage content use the following method: this.updateSinglePage(yourContent)
+            var t = this;
+
+            $.ajax({
+                    url: url,
+                    type: 'GET',
+                    dataType: 'html',
+                    timeout: 10000
+                })
+                .done(function(result) {
+                    t.updateSinglePage(result);
+                })
+                .fail(function() {
+                    t.updateSinglePage('AJAX Error! Please refresh the page!');
+                });
+        },
+    });
+    
+})(jQuery, window, document);
+</script>
+<script language="javascript">
+var savebutton = "1";
+var FormValidator = function () {
+	var runValidator1 = function() {
+		// for more info visit the official plugin documentation: 
+		// http://docs.jquery.com/Plugins/Validation
+
+		var form1 = $('#form_edit_1');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+		var warning1 = $('.alert-warning', form1);
+
+		form1.validate({
+			errorElement: 'span', //default input error message container
+			errorClass: 'help-block help-block-error', // default input error message class
+			focusInvalid: false, // do not focus the last invalid input
+			ignore: "",  // validate all fields including form hidden input
+			//RULES
+			rules: {
+				template_id: {
+					required: true
+				}
+			},
+
+			invalidHandler: function (event, validator) { //display error alert on form submit              
+				success1.hide();
+				error1.show();
+				App.scrollTo(error1, -200);
+			},
+
+			errorPlacement: function (error, element) { // render error placement for each input type
+				var cont = $(element).parent('.input-group');
+				if (cont) {
+					cont.after(error);
+				} else {
+					element.after(error);
+				}
+			},
+
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+
+			success: function (label) {
+				label
+					.closest('.form-group').removeClass('has-error'); // set success class to the control group
+			},
+
+			submitHandler: function (form) {
+				success1.hide();
+				error1.hide();
+				warning1.hide();
+				
+				$.ajax({
+					type: "POST",
+					url: "api/sp_design_template_update.phtml",
+					data: form1.serialize(),
+					success: function() {
+						success1.show();
+						if (savebutton == "1")
+						{
+						setTimeout(function () {
+								window.location.replace("dashboard.phtml");
+							}, 500);
+						}
+					},
+					error: function() {
+						warning1.show();
+					}
+				});
+			}
+		});
+
+	};
+	return {
+		//main function to initiate template pages
+		init: function () {
+			runValidator1();
+		}
+	};
+}();
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function() {
+	FormValidator.init();
+});	
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
 </body>
