--- a/admin/catalog_system.phtml
+++ b/admin/catalog_system.phtml
@@ -6,6 +6,8 @@
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+<link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui-1.10.4.custom.min.css" />
+<link rel="stylesheet" href="assets/plugins/dynatree/src/skin-vista/ui.dynatree.css">
 <!-- END PAGE LEVEL PLUGINS -->
 </head>
 
@@ -28,7 +30,7 @@
 						<div class="container-fluid">
 							<!-- BEGIN PAGE TITLE -->
 							<div class="page-title">
-								<h1>Dashboard
+								<h1>System
 									<small>dashboard & statistics</small>
 								</h1>
 							</div>
@@ -40,9 +42,64 @@
 					<div class="page-content">
 						<div class="container-fluid">
 							<!-- BEGIN PAGE CONTENT INNER -->
+							<form id="form_edit_1" class="form-horizontal form-row-seperated" action="#">
 							<div class="page-content-inner">
-								
+								<div class="row">
+									<div class="col-md-3">
+										<div class="portlet blue-steel box">
+											<div class="portlet-title">
+												<div class="caption">
+													<i class="fa fa-cogs"></i> Categories
+												</div>
+												<div class="actions">
+													<a data-toggle="modal" href="#myModal1" class="btn btn-default btn-sm">
+													<i class="fa fa-plus"></i> Add Category
+													</a>
+													<a data-toggle="modal"  href="#myModal2" class="btn btn-default btn-sm">
+													<i class="fa fa-plus"></i> Add System
+													</a>
+												</div>
+											</div>
+											<div class="portlet-body">
+												<div id="tree3"></div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-9 no-padding">
+										<div class="portlet blue-steel box">
+											<div class="portlet-title">
+												<div class="caption">
+													<i class="fa fa-cogs"></i> Categories
+												</div>
+												<div class="actions">
+													<button class="btn btn-success" onclick="savebutton='1';">
+														<i class="fa fa-check"></i> Save
+													</button>
+													<button class="btn btn-danger btn-sm" type="button" id="DeleteCategory">
+													<i class="fa fa-remove"></i>
+													Delete Category
+													</button>
+												</div>
+											</div>
+											<div class="portlet-body">
+												<div class="alert alert-danger display-hide">
+												<button class="close" data-close="alert"></button> You have some form errors. Please check below. 
+												</div>
+												<div class="alert alert-success display-hide">
+												<button class="close" data-close="alert"></button> The information has been saved.
+												</div>
+												<div class="alert alert-warning display-hide">
+												<button class="close" data-close="alert"></button> The information has not been saved properly. Please contact system administrator.
+												</div>
+												<span id="dept_detail">
+												<p>Select existing category on the left or click on the "add" button to add new category.
+												</span>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
+							</form>
 							<!-- END PAGE CONTENT INNER -->
 						</div>
 					</div>
@@ -60,14 +117,331 @@
 		</div>
 	</div>
 </div>
+<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title">Add New System Category</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					Would you like to add new System Cateogry?
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
+					Close
+				</button>
+				<button class="btn btn-primary" data-dismiss="modal" id="btn-add-root-category-confirm">
+					Confirm
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title">Add New System</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					Would you like to add System under currently selected category?
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
+					Close
+				</button>
+				<button class="btn btn-primary" data-dismiss="modal" id="btn-add-sub-category-confirm">
+					Confirm
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="loading-mask" style="display:none">
+<p class="loader" id="loading_mask_loader"><img src="assets/images/ajax-loader-primary.gif" alt="Loading..."/><br/>Please wait...</p>
+</div>
+<div id="dialog-confirm" title="Confirmation Required">
+Are you sure you want to do this?
+</div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-
+<script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
+<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
+<script src="assets/plugins/dynatree/src/jquery.dynatree.js"></script>
 <!-- END PAGE LEVEL PLUGINS -->
 
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
-<script type="text/javascript">
-	
+<script language="javascript">
+var theActivatedCategory = "0";
+
+var UITreeview = function () {
+	//function to initiate jquery.dynatree
+	var runTreeView = function () {
+		//External data 
+		$("#tree3").dynatree({
+			initAjax: {
+				url: "api/sp_system_category_get_tree_list.phtml",
+				data: { mode: "funnyMode" }
+			},
+			
+			onActivate: function (node) {
+				theActivatedCategory = node.data.key;
+				$('#loading-mask').show();
+				jQuery.ajax({
+					type:"get",
+					url: "api/sp_system_category_get_edit_detail_html.phtml",
+					data: {'category_id' : node.data.key, 'isAjax':true},
+					dataType: 'html',
+					success: function(data) {
+						jQuery("#dept_detail").html(data);
+					},
+					complete: function(){
+						$('#loading-mask').hide();
+						$('#mainTitle1').html(node.data.title + "(ID:" + node.data.key + ")");
+						$('#mainTitle2').html(node.data.title + "(ID:" + node.data.key + ")");
+						window.scrollTo(0,0);
+						$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+							var target = $(e.target).attr("href") // activated tab
+							//alert(target);
+							jQuery.ajax({
+								type:"get",
+								url: "api/save_tab_session.phtml",
+								data: {'tabtarget' : target, 'tabpage' : 'SYSTEMLIST_TABTARGET' ,'isAjax':true},
+								dataType: 'html',
+								success: function(data) {
+									//
+								}
+							});
+						  
+						  //
+						});
+					}
+				});
+			},
+			onDeactivate: function (node) {
+				//$("#echoActive").text("-");
+			},
+			
+			dnd: {
+				preventVoidMoves: true, // Prevent dropping nodes 'before self', etc.
+				onDragStart: function (node) {
+					/** This function MUST be defined to enable dragging for the tree.
+					 *  Return false to cancel dragging of node.
+					 */
+					return true;
+				},
+				onDragEnter: function (node, sourceNode) {
+					/** sourceNode may be null for non-dynatree droppables.
+					 *  Return false to disallow dropping on node. In this case
+					 *  onDragOver and onDragLeave are not called.
+					 *  Return 'over', 'before, or 'after' to force a hitMode.
+					 *  Return ['before', 'after'] to restrict available hitModes.
+					 *  Any other return value will calc the hitMode from the cursor position.
+					 */
+					// Prevent dropping a parent below another parent (only sort
+					// nodes under the same parent)
+					if (node.parent !== sourceNode.parent) {
+						return false;
+					}
+					// Don't allow dropping *over* a node (would create a child)
+					return ["before", "after"];
+					//return true;
+				},
+				onDrop: function (node, sourceNode, hitMode, ui, draggable) {
+					/** This function MUST be defined to enable dropping of items on
+					 *  the tree.
+					 */
+					var souce_key = "";
+					var dest_key = "";
+
+					souce_key = sourceNode.data.key;
+					dest_key = node.data.key;
+
+					//alert(souce_key);
+					//alert(dest_key);
+					sourceNode.move(node, hitMode);
+
+					jQuery.ajax({
+						type: "get",
+						url: "api/sp_system_category_update.phtml",
+						data: { 'config_id': '<%=config_id%>', 'mode': 'gsort', 'skey': souce_key, 'dkey': dest_key, isAjax: true },
+						dataType: 'json',
+						success: function (data) {
+							//$("#tree3").dynatree("getTree").reload();
+						}
+					});
+					
+				}
+			}
+		});
+		
+	};
+	return {
+		//main function to initiate template pages
+		init: function () {
+			runTreeView();
+		}
+	};
+}();
+
+</script>
+<script language="javascript">
+var savebutton = "1";
+var FormValidator = function () {
+	var runValidator1 = function() {
+		// for more info visit the official plugin documentation: 
+		// http://docs.jquery.com/Plugins/Validation
+
+		var form1 = $('#form_edit_1');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+		var warning1 = $('.alert-warning', form1);
+
+		form1.validate({
+			errorElement: 'span', //default input error message container
+			errorClass: 'help-block help-block-error', // default input error message class
+			focusInvalid: false, // do not focus the last invalid input
+			ignore: "",  // validate all fields including form hidden input
+			//RULES
+			rules: {
+				dept_name: {
+					minlength: 2,
+					required: true
+				}
+			},
+			messages: {
+				dept_name: "Please specify category name"
+			},
+			//END OF RULES
+
+			invalidHandler: function (event, validator) { //display error alert on form submit              
+				success1.hide();
+				error1.show();
+				App.scrollTo(error1, -200);
+			},
+
+			errorPlacement: function (error, element) { // render error placement for each input type
+				var cont = $(element).parent('.input-group');
+				if (cont) {
+					cont.after(error);
+				} else {
+					element.after(error);
+				}
+			},
+
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+
+			success: function (label) {
+				label
+					.closest('.form-group').removeClass('has-error'); // set success class to the control group
+			},
+
+			submitHandler: function (form) {
+				success1.hide();
+				error1.hide();
+				warning1.hide();
+				
+				$.ajax({
+					type: "POST",
+					url: "api/sp_system_category_update.phtml",
+					data: form1.serialize(),
+					success: function() {
+						success1.show();
+						/*
+						if (savebutton == "1")
+						{
+						setTimeout(function () {
+								window.location.replace("design_cms.phtml");
+							}, 500);
+						}
+						*/
+						$("#tree3").dynatree("getTree").reload();
+					},
+					error: function() {
+						warning1.show();
+					}
+				});
+			}
+		});
+
+	};
+	return {
+		//main function to initiate template pages
+		init: function () {
+			runValidator1();
+		}
+	};
+}();
+</script>
+<script language="javascript">
+jQuery(document).ready(function() {
+	UITreeview.init();
+	FormValidator.init();
+	jQuery("#btn-add-root-category-confirm").click(function() {
+	$('#loading-mask').show();
+	jQuery.ajax({
+		type:"get",
+		url: "api/sp_system_category_get_edit_detail_html.phtml",
+		data: {'category_id' : '0', 'parent_id' : '0', 'isAjax':true},
+		dataType: 'html',
+		success: function(data) {
+			jQuery("#dept_detail").html(data);
+		},
+		complete: function(){
+			$('#loading-mask').hide();
+			$('#mainTitle1').html("New System Category");
+			$('#mainTitle2').html("New System Category");
+			window.scrollTo(0,0);
+			$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+				var target = $(e.target).attr("href") // activated tab
+				//alert(target);
+				jQuery.ajax({
+					type:"get",
+					url: "api/save_tab_session.phtml",
+					data: {'tabtarget' : target, 'tabpage' : 'SYSTEMLIST_TABTARGET' ,'isAjax':true},
+					dataType: 'html',
+					success: function(data) {
+						//
+					}
+				});
+			  
+			  //
+			});
+		}
+	});
+});
+
+jQuery("#btn-add-sub-category-confirm").click(function() {
+	if (theActivatedCategory == '0')
+	{
+		alert("Please select category first")
+	}
+	else
+	{
+		window.location.href = "catalog_system_detail.phtml?system_id=0";
+	}
+});
+});
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
 </body>
