--- a/admin/catalog_system_detail.phtml
+++ b/admin/catalog_system_detail.phtml
@@ -10,16 +10,23 @@
 <!-- #INCLUDE File="local/local.phtml" -->
 <!-- #INCLUDE File="util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="util/xt_func_string.phtml" -->
+<!-- #include file="aspuploader/include_aspuploader.asp" -->
 <!-- #INCLUDE File="include/i_login.phtml" -->
 <%
 	system_id = Trim(Request("system_id"))
 	system_name = Trim(Request("system_name"))
 	show_cat = Trim(Request("show_cat"))
 	
+	if system_id = "0" then
+		system_id = GetUniqueLongIntegerID()
+		system_op = "new"
+	end if
+	
 	'Get system name if blank...
 	sql = "SELECT * FROM " & g_storeid & "_system_product WHERE pf_id='" & system_id & "'"
 	set rsSystem = dbconn.Execute(sql)
 	if not rsSystem.EOF then
+		system_sku = rsSystem("sku")
 		system_name = rsSystem("name")
 		system_desc=rsSystem("description")
 		system_desc2=rsSystem("description2")
@@ -34,6 +41,8 @@
 		system_thumb_image2 = rsSystem("thumb_image2")
 		system_thumb_image3 = rsSystem("thumb_image3")
 		system_thumb_image4 = rsSystem("thumb_image4")
+		
+		system_image = rsSystem("image_file")
 		
 		'===========================================================================================
 		
@@ -152,6 +161,7 @@
 									<div class="col-md-12">
 										<form id="form_edit_1" class="form-horizontal form-row-seperated" action="#">
 										<input type="hidden" id="formop" name="formop" value="">
+										<input type="hidden" id="system_op" name="system_op" value="<%=system_op%>">
 										<input type="hidden" id="system_id" name="system_id" value="<%=system_id%>">
 											<div class="portlet">
 												<div class="portlet-title">
@@ -168,14 +178,15 @@
 													[Duplicate]
 													<% end if %>
 													</div>
+													
 													<div class="actions btn-set">
-														<button type="button" onclick="location.href='catalog_product.phtml';" name="back" class="btn btn-default">
+														<button type="button" onclick="location.href='catalog_system.phtml';" name="back" class="btn btn-default">
 															<i class="fa fa-angle-left"></i> Back
 														</button>
-														<button class="btn btn-success" onclick="savebutton='1';">
+														<button class="btn btn-success" onclick="savebutton='1';document.getElementById('formop').value='main';">
 															<i class="fa fa-check"></i> Save
 														</button>
-														<button class="btn btn-success" onclick="savebutton='0';">
+														<button class="btn btn-success" onclick="savebutton='0';document.getElementById('formop').value='main';">
 															<i class="fa fa-check-circle"></i> Save & Continue Edit
 														</button>
 														<div class="btn-group">
@@ -234,7 +245,14 @@
 														</ul>
 														<div class="tab-content">
 															<div class="tab-pane active" id="tab_system_detail_general">
-															
+<div class="form-group">
+	<label class="col-sm-2 control-label" for="system_sku">
+	SKU <span class="symbol required"></span>
+	</label>
+	<div class="col-sm-8">
+	<input type="text" placeholder="" id="system_sku" name="system_sku" class="form-control" value="<%=system_sku%>">
+	</div>
+</div>															
 <div class="form-group">
 	<label class="col-sm-2 control-label" for="system_name">
 	Name <span class="symbol required"></span>
@@ -275,6 +293,7 @@
 	<input type="text" placeholder="" id="system_weight" name="system_weight" class="form-control" value="<%=system_weight%>">
 	</div>
 </div>
+<!--
 <div class="form-group">
 	<label class="col-sm-2 control-label" for="system_is_noship">
 		Visibility <span class="symbol required"></span>
@@ -286,6 +305,7 @@
 		</select>
 	</div>
 </div>
+-->
 <div class="form-group">
 	<label class="col-sm-2 control-label" for="system_is_nontaxable">
 		Taxable <span class="symbol required"></span>
@@ -308,6 +328,8 @@
 		</select>
 	</div>
 </div>
+<input type="hidden" name="system_enable_upload" value="0" />
+<!--
 <div class="form-group">
 	<label class="col-sm-2 control-label" for="system_enable_upload">
 		Enable File Upload <span class="symbol required"></span>
@@ -319,6 +341,7 @@
 		</select>
 	</div>
 </div>
+-->
 																							
 															</div>
 															<div class="tab-pane" id="tab_system_detail_settings">
@@ -433,6 +456,7 @@
 					<i class="fa fa-cogs"></i> Detail
 				</div>
 				<div class="actions">
+				<!--
 					<button class="btn btn-success" onclick="savebutton='1';">
 						<i class="fa fa-check"></i> Save
 					</button>
@@ -440,6 +464,7 @@
 					<i class="fa fa-remove"></i>
 					Delete Category
 					</button>
+					-->
 				</div>
 			</div>
 			<div class="portlet-body">
@@ -496,6 +521,29 @@
 </div>
 															</div>
 															<div class="tab-pane" id="tab_system_detail_images">
+
+<%
+Dim uploader
+Set uploader=new AspUploader
+uploader.MaxSizeKB=5120
+uploader.AllowedFileExtensions="jpeg,jpg,gif,png"
+uploader.Name="myuploader"
+uploader.InsertText="Select multiple files (Max 5M)"
+uploader.InsertButtonID="uploadbutton"
+uploader.MultipleFilesUpload=true
+%>
+	
+<%=uploader.GetString() %>
+<button class="btn btn-primary btn-sm" type="button" id="uploadbutton">
+<i class="fa fa-upload"></i>
+Select multiple files (Max 5M)
+</button>
+<br /><br />
+<div style="padding:4px" id="myfilescontainer">
+	Loading....
+</div>
+															
+															
 															</div>
 														</div>
 													</div>
@@ -989,7 +1037,139 @@ var UITreeview = function () {
 }();
 
 </script>
+<script type="text/javascript">
+	var handlerurl='misc-filemanager-handler-system.asp?pf_id=<%=system_id%>';
+	function DoMyAjax(guidlist, deleteid)
+	{
+		guidlist = guidlist || "";
+		deleteid = deleteid || "";
 
+		//Send Request
+		var xh;
+		if (window.XMLHttpRequest)
+			xh = new window.XMLHttpRequest();
+		else
+			xh = new ActiveXObject("Microsoft.XMLHTTP");
+		xh.open("POST", handlerurl, false, null, null);
+		xh.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=utf-8");
+		xh.send("guidlist=" + guidlist + "&deleteid=" + deleteid);
+
+		if (xh.status != 200)
+		{
+			alert("http error " + xh.status);
+			setTimeout(function() { document.write(xh.responseText); }, 10);
+			return;
+		}
+
+		var filelist = document.getElementById("filelist");
+
+		var div = document.getElementById("myfilescontainer");
+
+		//alert(xh.responseText);
+		var list = eval(xh.responseText); //get JSON objects
+
+		if (list.length > 0)
+		{
+
+			var table = document.createElement("TABLE");
+
+			//table.border = 1;
+			//table.cellSpacing = 0;
+			//table.cellPadding = 4;
+			//table.style.borderCollapse = "collapse";
+			//table.style.width = "640px";
+			table.className = "table table-bordered table-hover";
+
+			var th = table.insertRow(-1);
+			//th.style.backgroundColor = "steelblue";
+			//th.style.color = "white";
+			th.style.textAlign = "center";
+			th.insertCell(-1).innerHTML = "image";
+			th.insertCell(-1).innerHTML = "Label";
+			th.insertCell(-1).innerHTML = "Sort Order";
+			th.insertCell(-1).innerHTML = "&nbsp;";
+			th.insertCell(-1).innerHTML = "Default";
+			
+			//th = table.insertRow(-1);
+			//th.style.backgroundColor = "steelblue";
+			//th.style.color = "white";
+			//th.style.textAlign = "center";
+			//th.insertCell(-1).innerHTML = "No Image";
+			//th.insertCell(-1).innerHTML = "&nbsp;";
+			//th.insertCell(-1).innerHTML = "&nbsp;";
+			//th.insertCell(-1).innerHTML = "&nbsp;";
+			//th.insertCell(-1).innerHTML = "<input type='radio' name='default_image' value='--'>";
+			
+			//Process Result:
+			var pf_image_file = "<%=system_image%>";
+			for (var i = 0; i < list.length; i++)
+			{
+				var item = list[i];
+				var row = table.insertRow(-1);
+				var td1 = row.insertCell(-1);
+				var td2 = row.insertCell(-1);
+				var td3 = row.insertCell(-1);
+				var td4 = row.insertCell(-1);
+				var td5 = row.insertCell(-1);
+
+				td1.style.width = "120px";
+				td1.style.textAlign = "center";
+				td1.innerHTML = "<img src='" + item.FileSecureURI + "' border='0'><input type='hidden' name='pf_list_image_id' value='" + item.FileName + "'>";
+
+				td2.innerHTML = item.FileName;
+				td2.style.textAlign = "center";
+				td2.innerHTML = "<input type='textbox' name='pf_list_image_label' class='form-control input-sm' style='width:100%' value='" + item.FileLabel + "'>";
+
+				td3.style.width = "80px";
+				td3.style.textAlign = "center";
+				td3.innerHTML = "<input type='textbox' name='pf_list_image_sort_order' class='form-control input-sm'  style='width:50px' value='" + item.FileSortOrder + "'>";
+
+				td4.style.width = "45px";
+				td4.style.textAlign = "center";
+				td4.innerHTML = "<a href='javascript:void(0)' onclick='DoMyDelete(\"" + item.FileName + "\",\"" + item.FileID + "\");return false;'>Delete</a>";
+				
+				td5.style.width = "45px";
+				td5.style.textAlign = "center";
+				if (pf_image_file == item.FileName)
+				{
+					td5.innerHTML = "<input type='radio' name='productimage' value='" + item.FileName + "' checked>";
+				}
+				else
+				{
+					td5.innerHTML = "<input type='radio' name='productimage' value='" + item.FileName + "'>";
+				}
+
+			}
+
+			div.innerHTML = "";
+			div.appendChild(table);
+		}
+		else
+		{
+			div.innerHTML = "<div style='padding:8px;border:solid 1px steelblue;color:maroon;'>No files.</div>";
+		}
+	}
+
+	function DoMyDelete(filename, fileid)
+	{
+		if (confirm("Are you sure you want to delete " + filename + "?"))
+		{
+			DoMyAjax("", fileid)
+		}
+	}
+
+	function CuteWebUI_AjaxUploader_OnPostback()
+	{
+
+		var uploader = document.getElementById("myuploader");
+		var guidlist = uploader.value;
+
+		DoMyAjax(guidlist);
+
+		//call uploader to clear the client state
+		uploader.reset();
+	}
+</script>
 <script type="text/javascript">
 		
 var oTable1;
@@ -1117,13 +1297,123 @@ var TableData = function () {
 }();
 
 </script>
+<script language="javascript">
+var savebutton = "1";
+var FormValidation = function () {
+	// basic validation
+	var handleValidation1 = function() {
+		var form1 = $('#form_edit_1');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+		var warning1 = $('.alert-warning', form1);
 
+		form1.validate({
+			errorElement: 'span', //default input error message container
+			errorClass: 'help-block help-block-error', // default input error message class
+			focusInvalid: false, // do not focus the last invalid input
+			ignore: "",  // validate all fields including form hidden input
+			//RULES
+			rules: {
+				system_name: {
+					minlength: 2,
+					required: true
+				},
+				group_name: {
+					minlength: 2,
+					required: true
+				}
+			},
+			messages: {
+				dept_name: "Please specify category name"
+			},
+			//END OF RULES
+			
+			invalidHandler: function (event, validator) { //display error alert on form submit              
+				success1.hide();
+				error1.show();
+				App.scrollTo(error1, -200);
+			},
+			
+			/*
+			errorPlacement: function (error, element) { // render error placement for each input type
+				var cont = $(element).parent('.input-group');
+				if (cont) {
+					cont.after(error);
+				} else {
+					element.after(error);
+				}
+			},
+			*/
+
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+
+			success: function (label) {
+				label
+					.closest('.form-group').removeClass('has-error'); // set success class to the control group
+			},
+
+			submitHandler: function (form) {
+				success1.hide();
+				error1.hide
+				warning1.hide();
+				
+				window.scrollTo(0,0);
+				
+				
+				$.ajax({
+					type: "POST",
+					url: "api/sp_cataglog_system_detail_update.phtml",
+					data: form1.serialize(),
+					success: function() {
+						success1.show();
+						
+						if (savebutton == "1")
+						{
+						setTimeout(function () {
+								window.location.replace("catalog_system.phtml");
+							}, 500);
+						}
+						else
+						{
+							$("#tree3").dynatree("getTree").reload();
+							jQuery("#dept_detail").html('<p>Select existing options on the left or click on the "add" button to add new option.</p>');
+							
+						}
+					},
+					error: function() {
+						warning1.show();
+					}
+				});
+			}
+		});
+
+
+	}
+	return {
+		//main function to initiate the module
+		init: function () {
+			handleValidation1();
+		}
+	};
+
+}();
+</script>
 <script>
 jQuery(document).ready(function() {
 	UITreeview.init();
 	UIModals.init();
-	//FormValidator.init();
+	FormValidation.init();
 	TableData.init();
+	DoMyAjax("");
 	
 	jQuery("#btn-add-root-category-confirm").click(function() {
 			//alert("adding group here");
@@ -1228,7 +1518,7 @@ jQuery(document).ready(function() {
 				for (var i = 0; i < data.ORDERITEMS.length; i++){
 					EditItems = data.ORDERITEMS[i].detail;
 				}
-				
+				//alert(jQuery("#order_detail").html);
 				jQuery("#order_detail").html(EditItems);
 				
 				ProcessPostItemUpdate();
