--- a/core/catalog/include_system_dept_start.phtml
+++ b/core/catalog/include_system_dept_start.phtml
@@ -1,23 +1,19 @@
 <!--#INCLUDE FILE="../../local/local.phtml"-->
+<!--#INCLUDE FILE="../i_adoopen.phtml"-->
 <!--#INCLUDE FILE="../../language_pack.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_session.phtml"-->
-<!--#INCLUDE FILE="../../i_initsession.phtml"-->
-<%
-	Session("shopper_id") = GetSession(Session("SESSIONKEY"), "sCID")
-	Session("Shopper_Name") = GetSession(Session("SESSIONKEY"), "sCName")
-	Session("PARTNER") = GetSession(Session("SESSIONKEY"), "sAffID")
-%>
-<!--#INCLUDE FILE="../../i_adodb.phtml"-->
+<!--#INCLUDE File="../../util/xt_func_util.phtml" -->
 <!--#INCLUDE FILE="../../util/xt_func_string.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_seo.phtml"-->
-<!--#INCLUDE File="../../util/xt_func_util.phtml" -->
-
+<!--#INCLUDE FILE="../../util/xt_func_shoppingcart.phtml"-->
+<!--#INCLUDE FILE="../../i_initsession.phtml"-->
+<!--#INCLUDE FILE="../i_login.phtml"-->
 <%
-	dept_ID = Request("dept_id")
+	dept_ID = Trim(Request("dept_id"))
 	dept_ID = FilterSKUString(dept_ID)
 	
-	sql = "SELECT dept_name FROM " & Session("StoreID") & "_system_dept WHERE dept_id='" & dept_ID & "'"
-	Set rsDeptName = Conn.Execute(sql)
+	sql = "SELECT dept_name FROM " & g_storeid & "_system_dept WHERE dept_id='" & dept_ID & "'"
+	Set rsDeptName = dbconn.Execute(sql)
 							
 	if not rsDeptName.EOF then
 	  dept_name = rsDeptName("dept_name")
@@ -27,4 +23,10 @@
 	  dept_ok = false
 	end if
 	rsDeptName.Close
+	
+	if(Session("LOGINGROUP") = "")then
+		member_group = "D"
+	else
+		member_group = Session("LOGINGROUP")
+	end if
 %>
